feat: use gatsby image optimisation plug-ins

--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -1,4 +1,27 @@
 .hero {
-  display: flex;
-  flex-direction: column;
+  position: relative;
+
+  picture::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .6));
+    height: 100%;
+    width: 100%;
+  }
+
+  img {
+    width: 100%;
+    min-height: 100%;
+  }
+
+  .tagline {
+    color: white;
+    font-size: 1.5em;
+    width: 60%;
+    left: 20%;
+    position: absolute;
+    top: 20%;
+  }
 }
