--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,22 +1,24 @@
 .header {
-  margin-bottom: 1.5rem;
+  margin: 4vh auto;
+  padding: 0 1rem;
+  display: grid;
+  grid-template-columns: 10% 90%;
 
-  .siteName {
-    text-shadow: none;
+  .siteLogoLink {
     background-image: none;
-
-    h3 {
-      display: inline;
-    }
+    align-self: center;
+    min-width: 40px;
+    max-width: 80px;
   }
 
   .navigationLinks {
-    list-style: none;
-    float: right;
+    margin-bottom: 0;
+    justify-self: end;
 
     .navigationLink {
       display: inline-block;
-      margin-right: 1rem;
+      margin: 1rem;
+      // width: 100px;
     }
   }
 }
