--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -18,10 +18,28 @@
 
   .tagline {
     color: white;
-    font-size: 1.5em;
-    width: 60%;
-    left: 20%;
+    font-size: 1em;
+    width: 80%;
+    left: 10%;
     position: absolute;
-    top: 20%;
+    top: 10%;
+  }
+
+  @media screen and (min-width: 617px) {
+    .tagline {
+      font-size: 1.25em;
+      width: 60%;
+      left: 20%;
+      right: 20%;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    .tagline {
+      font-size: 1.5em;
+      width: 60%;
+      left: 20%;
+      right: 20%;
+    }
   }
 }
