--- a/src/components/tourTypes.module.scss
+++ b/src/components/tourTypes.module.scss
@@ -1,23 +1,30 @@
+@import '../styles/theme.scss';
+
 .toursContainer {
   .tourContainer {
     position: relative;
     margin: 1.5rem 3rem;
 
     .tourType {
-      color: white;
+      color: $white;
       font-size: 1em;
       position: absolute;
       top: 3%;
-      background: #1ca086;
+      background: $red;
       padding: 0 1rem;
     }
-
+    .tourTypeDescription:hover {
+      background: $red;
+      opacity: 0.8;
+      color: $white;
+      font-weight: 600;
+    }
     .tourTypeDescription {
-      color: #ff0;
+      color: $black;
       font-size: 1em;
       position: absolute;
       bottom: 0;
-      background: #5f6b698a;
+      background: $light-green-opacity;
       padding: 0.5rem;
       width: 100%;
 
@@ -29,12 +36,12 @@
 
   .tourContainer:last-of-type {
     .tourType {
-      color: #18bcc6;
+      color: $red;
       font-size: 1em;
       position: absolute;
       top: 3%;
       right: 0;
-      background: white;
+      background: $white;
       padding: 0 1rem;
     }
   }
@@ -46,7 +53,8 @@
     grid-template-columns: 50% 50%;
 
     .tourContainer {
-      margin: 0;
+      // margin: 0;
+      margin: 0 1rem;
 
       .tourTypeDescription {
         font-size: 1em;
