style: improve responsiveness of homepage

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,6 +1,8 @@
 $red: #c62d18;
+$red-opacity: rgba(198, 45, 24, 0.8);
 $white: #FFF;
 $black: #000;
+$black-opacity: rgba(0, 0, 0, 0.25);
 $light-green: #e6f0d8;
 $light-green-opacity:#e6f0d894;
 $light-yellow: #fcf2bf;
