--- a/src/components/container.module.scss
+++ b/src/components/container.module.scss
@@ -1,5 +1,10 @@
 .container {
   margin: 3rem auto;
   padding: 0 1rem;
-  max-width: 80%;
+  max-width: 100%;
+
+  h2 {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
