--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -9,7 +9,8 @@
   position: sticky;
   top: 0;
   z-index: 1;
-  background-color: white;
+  background-color: $white;
+  box-shadow: 0px 2px 10px -2px $black-opacity;
 
   .siteLogoLink {
     background-image: none;
