--- a/src/components/homeHero.module.scss
+++ b/src/components/homeHero.module.scss
@@ -1,4 +1,4 @@
-@import './theme.scss';
+@import '../styles/theme.scss';
 
 .hero {
   position: relative;
@@ -9,7 +9,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .6));
+    background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, .6));
     height: 100%;
     width: 100%;
   }
@@ -20,6 +20,14 @@
     left: 10%;
     position: absolute;
     top: 0;
-    margin: 2em auto;
+    margin: 1em auto;   
+    font-size: 1.5em;
+  }
+
+  @media screen and (min-width: 790px) {
+    .tagline {
+      margin: 2em auto;   
+      font-size: 2em;
+    }
   }
 }
