--- a/src/components/homeTourTypes.module.scss
+++ b/src/components/homeTourTypes.module.scss
@@ -3,46 +3,41 @@
 .toursContainer {
   .tourContainer {
     position: relative;
-    margin: 1.5rem 3rem;
 
     .tourType {
       color: $white;
-      font-size: 1em;
       position: absolute;
       top: 3%;
       background: $red;
       padding: 0 1rem;
     }
+
     .tourTypeDescription:hover {
       background: $red;
-      opacity: 0.8;
+      color: $white;
+    }
+
+    .tourTypeDescription {
+      background: $red;
       color: $white;
       font-weight: 600;
-    }
-    .tourTypeDescription {
-      color: $black;
-      font-size: 1em;
-      position: absolute;
-      bottom: 0;
-      background: $light-green-opacity;
       padding: 0.5rem;
       width: 100%;
+      display: flex;
+      align-items: center;
 
       p {
         margin: 0;
+        width: 100%;
       }
     }
   }
 
   .tourContainer:last-of-type {
     .tourType {
-      color: $red;
-      font-size: 1em;
-      position: absolute;
-      top: 3%;
       right: 0;
       background: $white;
-      padding: 0 1rem;
+      color: $red;
     }
   }
 }
@@ -53,13 +48,18 @@
     grid-template-columns: 50% 50%;
 
     .tourContainer {
-      // margin: 0;
       margin: 0 1rem;
 
       .tourTypeDescription {
+        background: $white;
+        color: $red;
+        // background: $red-opacity;
+        // color: $white;
         font-size: 1em;
         padding: 1rem;
         height: 38%;
+        position: absolute;
+        bottom: 0;
       }
     }
   }
@@ -71,7 +71,7 @@
       .tourTypeDescription {
         font-size: 1em;
         padding: 1rem;
-        height: 28%;
+        height: 30%;
       }
     }
   }
