style: update home page styling

--- a/src/components/homeTourTypes.module.scss
+++ b/src/components/homeTourTypes.module.scss
@@ -51,8 +51,8 @@
       margin: 0 1rem;
 
       .tourTypeDescription {
-        background: $white;
-        color: $red;
+        // background: $white;
+        // color: $red;
         // background: $red-opacity;
         // color: $white;
         font-size: 1em;
