--- a/src/components/container.module.scss
+++ b/src/components/container.module.scss
@@ -1,10 +1,18 @@
+@import '../styles/theme.scss';
+
 .container {
-  margin: 3rem auto;
-  padding: 0 1rem;
   max-width: 100%;
+  margin: 0;
+  background: $light-green;
+  padding: 1rem;
 
   h2 {
     width: 80%;
-    margin: 0 auto;
+    margin: 2rem auto;
+    line-height: 1.6;
   }
+}
+
+.containerWhite {
+  background: $white;
 }
