--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -21,7 +21,7 @@
 
   .navigationLinks {
     align-self: center;
-    margin-bottom: 0;
+    margin: 0;
     justify-self: end;
 
     .navigationLink {
