--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,11 +1,40 @@
-$red: #c62d18;
-$red-opacity: rgba(198, 45, 24, 0.8);
 $white: #FFF;
 $black: #000;
 $black-opacity: rgba(0, 0, 0, 0.25);
+$dark-grey: #3D3B3C;
+// $eggshell: #E7DFC6;
+
 $light-green: #e6f0d8;
-$light-green-opacity:#e6f0d894;
-$light-yellow: #fcf2bf;
-$light-red: #f9c0a5;
-$light-blue: #9ecde7;
-$green: #1ca086;
+// $light-yellow: #fcf2bf;
+// $light-red: #f9c0a5;
+// $light-blue: #9ecde7;
+
+$red-0: #C62C18;
+$red-1: #FB7A69;
+$red-2: #E24F3C;
+$red-3: #A21806;
+$red-4: #7A0E00;
+
+$green-0: #77B616;
+$green-1: #B2E861;
+$green-2: #94D038;
+$green-3: #5D9506;
+$green-4: #447000;
+
+// $orange-0: #C66E18;
+// $orange-1: #FBB269;
+// $orange-2: #E28F3C;
+// $orange-3: #A25406;
+// $orange-4: #7A3C00;
+
+// $pink-0: #A51459;
+// $pink-1: #D25891;
+// $pink-2: #BD3274;
+// $pink-3: #870543;
+// $pink-4: #660030;
+
+// $blue-0: #12677B;
+// $blue-1: #448B9C;
+// $blue-2: #28798C;
+// $blue-3: #075364;
+// $blue-4: #023D4B;
