--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -13,7 +13,6 @@
   box-shadow: 0px 2px 10px -2px $black-opacity;
 
   .siteLogoLink {
-    background-image: none;
     align-self: center;
     min-width: 40px;
     max-width: 80px;
@@ -30,7 +29,7 @@
       // width: 100px;
 
       a {
-        color: $red;
+        color: $red-0;
       }
     }
   }
