--- a/src/components/homeTestimonial.module.scss
+++ b/src/components/homeTestimonial.module.scss
@@ -1,11 +1,14 @@
-  .container {
-    background: #f9f9f9;
-    border-left: 10px solid #ccc;
-    padding: 0.5em 10px;
+@import '../styles/theme.scss';
+
+.container {
+    box-shadow: 0px 2px 10px -2px $black-opacity;
+    background: $green-1;
+    background: $white;
+    border-left: 10px solid $red-0;
+    padding: 3rem;
     quotes: "\201C""\201D""\2018""\2019";
 
     .quote {
-
       display: inline;
 
       p:first-of-type {
@@ -22,7 +25,7 @@
   }
 
   .container:before {
-    color: #ccc;
+    color: $red-0;
     content: open-quote;
     font-size: 4em;
     line-height: 0.1em;
