--- a/src/components/homeTourTypes.module.scss
+++ b/src/components/homeTourTypes.module.scss
@@ -3,23 +3,25 @@
 .toursContainer {
   .tourContainer {
     position: relative;
+    box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.25);
 
     .tourType {
       color: $white;
       position: absolute;
       top: 3%;
-      background: $red;
+      background: $red-0;
       padding: 0 1rem;
     }
 
     .tourTypeDescription:hover {
-      background: $red;
+      background: $red-0;
       color: $white;
     }
 
     .tourTypeDescription {
-      background: $red;
-      color: $white;
+      background: $white;
+      color: $red-0;
+      opacity: 0.9;
       font-weight: 600;
       padding: 0.5rem;
       width: 100%;
@@ -37,7 +39,17 @@
     .tourType {
       right: 0;
       background: $white;
-      color: $red;
+      color: $red-0;
+    }
+
+    .tourTypeDescription {
+      background: $red-0;
+      color: $white;
+    }
+
+    .tourTypeDescription:hover {
+      background: $white;
+      color: $red-0;
     }
   }
 }
@@ -51,10 +63,6 @@
       margin: 0 1rem;
 
       .tourTypeDescription {
-        // background: $white;
-        // color: $red;
-        // background: $red-opacity;
-        // color: $white;
         font-size: 1em;
         padding: 1rem;
         height: 38%;
