--- a/src/components/homeValues.module.scss
+++ b/src/components/homeValues.module.scss
@@ -10,6 +10,7 @@
     .valueImageContainer {
       position: relative;
       height: 360px;
+      box-shadow: 0px 2px 10px -2px $black-opacity;
 
     picture::after {
       content: '';
@@ -27,13 +28,13 @@
         height: 100%;
         width: 80%;
         left: 10%;
-        color: $light-green;
+        color: $green-1;
         font-size: 2rem;
       }
     }
 
     .valueDescription {
-      background: $light-green;
+      box-shadow: 0px 2px 10px -2px $black-opacity;
       height: 100%;
       padding: 1rem;
       display: grid;
