--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,8 +1,13 @@
-$white: #FFF;
+$white:#fff;
+$off-white:#f8f6f4;
 $black: #000;
 $black-opacity: rgba(0, 0, 0, 0.25);
-$dark-grey: #3D3B3C;
-// $eggshell: #E7DFC6;
+$blue: #7BC7C5;
+$brown: #463d3d;
+$orange: #f19d0c;
+// $red: #b35650;
+$red: #F04059;
+$transparent-brown: #463d3d99;
 
 $light-green: #e6f0d8;
 // $light-yellow: #fcf2bf;
