--- a/src/components/border.module.scss
+++ b/src/components/border.module.scss
@@ -1,7 +1,7 @@
 @import '../styles/theme.scss';
 
 .border {
-  border-top: 2px solid $red-0;
+  border-top: 2px solid $orange;
   width: 80%;
   margin: auto;
   // box-shadow: inset 0px 10px 8px -10px $black-opacity, inset 0 0 0 0;
