--- a/src/components/homeTourTypes.module.scss
+++ b/src/components/homeTourTypes.module.scss
@@ -4,29 +4,38 @@
   .tourContainer {
     position: relative;
     box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.25);
+    height: 56vh;
 
     .tourType {
       color: $white;
+      background: $transparent-brown;
       position: absolute;
-      top: 3%;
-      background: $red-0;
-      padding: 0 1rem;
+      top: 58%;
+      padding: 0.5rem 0;
+      width: 40%;
+      left: 30%;
+      border: 2px solid #f19d0c;
+      cursor: pointer;
+      border-radius: 2px;
+    }
+
+    .tourImage {
+      height: 80%;
     }
 
     .tourTypeDescription:hover {
-      background: $red-0;
-      color: $white;
+      background: $white;
+      color: $orange;
     }
 
     .tourTypeDescription {
       background: $white;
-      color: $red-0;
-      opacity: 0.9;
-      font-weight: 600;
       padding: 0.5rem;
       width: 100%;
       display: flex;
       align-items: center;
+      height: 20%;
+      border-top: 8px solid $orange;      
 
       p {
         margin: 0;
@@ -38,18 +47,6 @@
   .tourContainer:last-of-type {
     .tourType {
       right: 0;
-      background: $white;
-      color: $red-0;
-    }
-
-    .tourTypeDescription {
-      background: $red-0;
-      color: $white;
-    }
-
-    .tourTypeDescription:hover {
-      background: $white;
-      color: $red-0;
     }
   }
 }
@@ -63,36 +60,9 @@
       margin: 0 1rem;
 
       .tourTypeDescription {
-        font-size: 1em;
         padding: 1rem;
-        height: 38%;
-        position: absolute;
-        bottom: 0;
       }
     }
   }
 }
 
-@media screen and (min-width: 960px) {
-  .toursContainer {
-    .tourContainer {
-      .tourTypeDescription {
-        font-size: 1em;
-        padding: 1rem;
-        height: 30%;
-      }
-    }
-  }
-}
-
-@media screen and (min-width: 1160px) {
-  .toursContainer {
-    .tourContainer {
-      .tourTypeDescription {
-        font-size: 1em;
-        padding: 1rem;
-        height: 20%;
-      }
-    }
-  }
-}
